[project]
name = "kwj_history"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "Kimwonjoon", email = "kimpass189@gmail.com"},
]
dependencies = [
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "tabulate>=0.9.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
hist = "kwj_history.cli:query"
my-history = 'kwj_history.cli:cmd'

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.1",
    "pytest-cov>=5.0.0",
]

[tool.pdm.scripts]
test = "pytest"
ctest = "pytest --cov"
stest = "pytest -s"
giti = "pip install git+https://github.com/Kimwonjoon/kwj_history@0.2.0/args"

[tool.pytest.ini_options]
pythonpath = ["src",]

[project.urls]
Homepage = "https://github.com/Kimwonjoon/kwj_history/tree/0.2.0/args"
Issues = "https://github.com/Kimwonjoon/kwj_history/issues"
